--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "short",
   "module": "index.ts",
   "scripts": {
+    "start": "bun run src/index.ts",
     "dev": "bun --watch run src/index.ts"
   },
   "devDependencies": {
