--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "module": "index.ts",
   "scripts": {
     "start": "bun run src/index.ts",
-    "dev": "bun --watch run src/index.ts"
+    "dev": "bun --watch run src/index.ts",
+    "build": "bun build",
+    "migrate:deploy": "bun run prisma migrate deploy"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
