--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
     "@types/express": "4",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
-    "prisma": "^5.22.0",
     "typescript-eslint": "^8.16.0"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
+    "mongoose": "^8.8.4",
     "zod": "^3.23.8"
   }
 }
