Deleted script migrate

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "module": "index.ts",
   "scripts": {
     "start": "bun run src/index.ts",
-    "dev": "bun --watch run src/index.ts",
-    "migrate:deploy": "bun run prisma migrate deploy"
+    "dev": "bun --watch run src/index.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
